...
                                <rect key="frame" x="16" y="54" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnSendPush"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="L9M-3e-8Lr"/>
...
                                <rect key="frame" x="16" y="100" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnRichPush"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="3Q0-4Y-rMZ"/>
...
                                <rect key="frame" x="16" y="54" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnLoginSigup"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="srL-s3-a7t"/>
...
                                <rect key="frame" x="16" y="196" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnRequestAuthMail"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="1Rc-DQ-xHs"/>
...
                                <rect key="frame" x="16" y="242" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnLoginEmail"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="Vzb-Ze-mhG"/>
...
                                <rect key="frame" x="16" y="288" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnAddMemberToRole"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="nhk-xn-5Lo"/>
...
                                <rect key="frame" x="16" y="334" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnRemoveMemberFromRole"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="7fg-3M-gQq"/>
...
                                <rect key="frame" x="16" y="100" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnAnonymousAuth"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="oRx-kd-hk5"/>
...
                                <rect key="frame" x="16" y="380" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnAddChildRole"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="2QO-vH-RoK"/>
...
                                <rect key="frame" x="16" y="110" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnSave"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="0QN-8T-lS9"/>
...
                                <rect key="frame" x="16" y="156" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnGetObject"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="mSN-BB-tnS"/>
...
                                <rect key="frame" x="16" y="202" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnUpdateObject"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="JJR-nk-kjG"/>
...
                                <rect key="frame" x="16" y="248" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnDeleteObject"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="OXc-wr-jzv"/>
...
                                <rect key="frame" x="16" y="294" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnQueryRanking"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="3pN-pW-75f"/>
...
                                <rect key="frame" x="16" y="340" width="343" height="36"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnACL"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="VFh-SQ-Ae3"/>
...
                                <rect key="frame" x="16" y="64" width="343" height="36"/>
